--- a/index.html
+++ b/index.html
@@ -5,34 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quiz</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+          integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <!-- CSS -->
     <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-    <div class="container">
-       <div class="quiz">
-           <h3>Text pitanja</h3>
-           <h2>Osvojli ste 12 poena</h2>
-           <div class="options">
-               <div class="option">Opcija1</div>
-               <div class="option">Opcija2</div>
-               <div class="option">Opcija3</div>
-               <div class="option">Opcija4</div>
-           </div>
-           <footer>
-            <p>Pitanje 1/10</p>
+<div class="container">
+    <div class="quiz">
+        <h3>question text</h3>
+        <h2>You won 12 points</h2>
+        <div class="options">
+            <div class="option">Option 1</div>
+            <div class="option">Option 2</div>
+            <div class="option">Option 3</div>
+            <div class="option">Option 4</div>
+        </div>
+        <footer>
+            <p>Question 1/10</p>
         </footer>
-       </div>
-       
     </div>
-    <script src="Question.js"></script>
-    <script src="Quiz.js"></script>
-    <script src="main.js"></script>
+
+</div>
+<script src="Quiz.js"></script>
+<script src="main.js"></script>
 </body>
 
 </html>
